# rbis

./: .gitignore  BUILD_PLAN.md  RBIS_INSTALACAO_macOS.md  RBIS_Vignette_v4_0_EN.md  README.md  pyproject.toml  setup_rbis_github.sh
rbis/: __init__.py  utils.py
rbis/_core/: __init__.py  cross_fidelity.py  distance.py  fidelity.py  gene_scoring.py  rank_product.py  sieve.py  silence.py  snr.py  sparse_utils.py  specificity.py  validation.py
rbis/pl/: __init__.py  cluster_heatmap.py  cross_fidelity_plot.py  fidelity_plot.py  gene_plots.py  intermediate_plots.py  overview_plots.py  permutation_plot.py  specificity_climb.py
rbis/tl/: __init__.py  diagnostics.py  find_markers_bulk.py  find_markers_sc.py  find_silenced_bulk.py  find_silenced_sc.py  permutation.py  score_cell_fidelity.py  score_cross_fidelity.py  score_sample_fidelity.py  silence_weight_scan.py  subcluster_by_signature.py
