[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbis"
version = "4.0.0"
description = "RBIS — Rank-Based Identity Search for robust biomarker discovery"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
    "anndata>=0.8",
    "scanpy>=1.9",
    "matplotlib>=3.5",
    "seaborn>=0.12",
]

[project.optional-dependencies]
performance = ["numba>=0.56", "joblib>=1.2"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["rbis*"]
